# agent-seo-toolbox

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/skills/agent-seo-toolbox/: SKILL.md
.claude/skills/agent-seo-toolbox-init/: SKILL.md
docs/: TODO.md  install.md  methodology.md  usage.md
examples/: seo_tools_keywords.csv
scripts/: llm-push-check
src/seo_toolbox/: cache.py  cli.py  config.py  dataforseo.py  db.py  grouping.py  registry.py  similarity.py  url_utils.py
src/seo_toolbox/commands/: cluster.py  init.py  rank_check.py
src/seo_toolbox/frontend/: cluster-graph.js  cluster.css  cluster.html.j2  cluster.js
tests/integration/: conftest.py  test_cluster.py  test_dataforseo_sandbox.py  test_init.py  test_rank_check.py  test_serp_cache.py
tests/smoke/: test_agent_invocation.py
tests/unit/: test_cache_logic.py  test_config.py  test_dataforseo_parse.py  test_dataforseo_payload.py  test_frontend_template.py  test_grouping.py  test_similarity.py  test_url_utils.py
